# jaytwo-library

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  Build-Lib.md  CMakeLists.txt  CMakePresets.json.md  CONTRIBUTING.md  LICENSE  Pre-Installation.md  Pre-Preparation.md  PresetBuild.md  README.md  Use-Installed-Lib.md  update_submodule.cmd  update_submodule.sh
cmake/: vcpkg.cmake  (+4 more)
example/: CMakeLists.txt
example/concurrent_queue/: CMakeLists.txt  main.cpp
example/config_example/: CMakeLists.txt  app_config.conf  main.cpp
example/crash_handler/: CMakeLists.txt  main.cpp
example/file-finder/: CMakeLists.txt  main.cpp
example/hello-file-finder/: CMakeLists.txt  main.cpp  보고서_최종본.txt
example/hello-log-manager/: CMakeLists.txt
example/hello-template/: CMakeLists.txt
example/hello-world/: CMakeLists.txt
example/log-manager/: CMakeLists.txt  main.cpp
example/net_interface/: CMakeLists.txt  main.cpp
example/network/: CMakeLists.txt
example/network/downloader/: CMakeLists.txt  main.cpp
example/network/downloader/test/: test_multipart_server.py
example/network/ftp_client/: CMakeLists.txt  main.cpp
example/network/rest_get/: CMakeLists.txt  main.cpp
example/network/rest_get/test/: server.py
example/network/rest_post/: CMakeLists.txt  main.cpp
example/network/rest_post/test/: server.py
example/network/tcp_client/: CMakeLists.txt  main.cpp
example/network/tcp_client/test/: check_tcp_params.ps1  check_tcp_params.sh  server.py
example/network/tcp_server/: CMakeLists.txt  main.cpp
example/network/tcp_server/test/: ipv4_client.py  ipv6_client.py
example/network/udp_receiver/: CMakeLists.txt  main.cpp
example/network/udp_receiver/test/: sendBroadcast.py  sendMulticast.py  sendUnicast.py
example/network/udp_sender/: CMakeLists.txt  main.cpp
example/pub_sub/: CMakeLists.txt  person.hpp
example/pub_sub/pub/: CMakeLists.txt  main.cpp
example/pub_sub/sub/: CMakeLists.txt  main.cpp
example/resource_monitor/: CMakeLists.txt  main.cpp
example/use_j2_installed/: CMakeLists.txt
example/use_j2_installed/src/: main.cpp
examples/hello/: CMakeLists.txt  main.cpp
hello-log-manager/: CMakeLists.txt  j2_logger_manager_config_english.ini  j2_logger_manager_config_korean.ini  main.cpp
hello-template/: CMakeLists.txt  main.cpp
j2_library/: Build.md  CMakeLists.txt  INSTALL.ko.md  install-lib.cmd  linux-build.sh  mingw-build.cmd  vs-build.cmd
j2_library/cmake/: j2_cmake.cmake  j2_find_package.cmake  j2_libraryConfig.cmake.in  j2_link_lib.cmake  j2_network_platform_post_module.cmake  j2_network_platform_pre_module.cmake  j2_sanitize.cmake  j2_utf8.cmake  j2_vcpkg.cmake  j2_warnings.cmake  sanitize.cmake  utf8.cmake  vcpkg.cmake
j2_library/include/j2_library/: export.hpp  j2_library.hpp  version.hpp  version.hpp.in
j2_library/include/j2_library/bit/: bit.hpp  bit_array.hpp
j2_library/include/j2_library/broker/: broker.hpp  object_broker.hpp
j2_library/include/j2_library/config/: config.hpp  config_manager.hpp
j2_library/include/j2_library/core/: MutexString.hpp  SingleFunction.hpp  bit_array.hpp  core.hpp  core_single_function.hpp  encoding.hpp  mutex_string.hpp  overload.hpp  single_function.hpp  string.hpp  to_console_encoding.hpp  to_string.hpp
j2_library/include/j2_library/crypt/: cipher.hpp  cipher_utils.hpp  crypt.hpp
j2_library/include/j2_library/datetime/: README.ko.md  datetime.hpp  datetime_common.hpp  datetime_convert.hpp  datetime_string.hpp  datetime_util.hpp
j2_library/include/j2_library/directory/: directory.hpp  directory_maker.hpp
j2_library/include/j2_library/encoding/: encoding.hpp  encoding_function.hpp
j2_library/include/j2_library/expected/: expected.hpp
j2_library/include/j2_library/file/: executable_name.hpp  executable_path.hpp  file.hpp  file_finder.hpp  file_info.hpp  permissions.hpp
j2_library/include/j2_library/ini/: ini.hpp  ini_parser.hpp
j2_library/include/j2_library/json/: INSTALL.ko.md  gen_nlohmann_get_code.py  json.hpp
j2_library/include/j2_library/log/: log.hpp  logger_manager.hpp
j2_library/include/j2_library/macro/: macro.hpp  setter_getter.hpp  try_opt.hpp
j2_library/include/j2_library/network/: ethernet.hpp  network.hpp  win_net_shim.hpp
j2_library/include/j2_library/overload/: overload.hpp
j2_library/src/: j2_library.cpp  version.cpp
j2_library/src/bit/: bit_array.cpp
j2_library/src/config/: config_manager.cpp
j2_library/src/core/: MutexString.cpp  SingleFunction.cpp  bit_array.cpp  core_single_function.cpp  dynamic_thread.cpp  encoding.cpp  mutex_string.cpp  single_function.cpp  string.cpp  to_console_encoding.cpp  to_string.cpp
j2_library/src/crypt/: cipher.cpp  cipher_utils.cpp
j2_library/src/datetime/: datetime.cpp  datetime_convert.cpp  datetime_string.cpp  datetime_util.cpp
j2_library/src/directory/: directory.cpp  directory_maker.cpp
j2_library/src/encoding/: encoding.cpp  encoding_function.cpp
j2_library/src/file/: executable_name.cpp  executable_path.cpp  file_finder.cpp  file_info.cpp  permissions.cpp
j2_library/src/ini/: ini.cpp  ini_parser.cpp
j2_library/src/json/: json.cpp
j2_library/src/log/: logger_manager.cpp
j2_library/src/string/: mutex_string.cpp  string.cpp  string_basic.cpp  to_console_encoding.cpp  to_string.cpp  u8string.cpp
j2_library/src/system/: crash_handler.cpp  device_id.cpp  resource_monitor.cpp
j2_library/src/thread/: dynamic_thread.cpp
j2_library/src/uuid/: uuid_v4.cpp
j2_library/src/xml/: xml.cpp  xml_parser.cpp
tests/: CMakeLists.txt  INSTALL.md  gtest_compat.hpp  test_basic.cpp  test_bit_array.cpp  test_crypt.cpp  test_date_time_v1.cpp  test_datetime.cpp  test_device_id.cpp  test_directory.cpp  test_dynamic_thread.cpp  test_encoding.cpp  test_expected.cpp  test_file.cpp  test_getter_setter.cpp  test_ini.cpp  test_json.cpp  test_mutex_string.cpp  test_mutexstring.cpp  test_object_broker.cpp  test_overload.cpp  test_permissions_info.cpp  test_result.cpp  test_scheduler.cpp  test_single_function.cpp  test_string.cpp  test_to_string.cpp  test_try_opt.cpp  test_u8string.cpp  test_uuid.cpp  test_xml.cpp
(+61 files in other folders)
